syntax = "proto3";
package favorite;
option go_package = "./proto";

service favorite {
    rpc GetFavoriteVideoListById(IdRequest) returns (videoIdListResponse);
    rpc FavoriteAction(ActionRequest) returns (ActionResponse);
}

message ActionRequest{
    int64 id = 1;
    int64 videoID = 2;
    int32 actionType = 3;
}

message ActionResponse{
    bool success = 1;
}

message IdRequest{
    int64 id = 1 ;
}

message videoIdListResponse{
    repeated int64 videoIdList = 1;
}
